--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from src.data import normalize_column_names"
    ]
   },
   {
@@ -36,7 +37,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"../data/raw/diabetic_data.csv\")\n",
-    "df.columns = df.columns.str.lower()"
+    "df = normalize_column_names(df)"
    ]
   },
   {
@@ -309,7 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot(df[\"time_in_hospital\"], kde=False, bins=15)"
+    "sns.histplot(df[\"time_in_hospital\"], kde=False, bins=14)"
    ]
   },
   {
@@ -387,11 +388,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6e58c38c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"max_glu_serum\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7b312211",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"max_glu_serum\"].value_counts()\n",
     "df[\"a1cresult\"].value_counts()"
    ]
   },
@@ -411,9 +421,29 @@
    "outputs": [],
    "source": [
     "med_cols = [\n",
-    "    col\n",
-    "    for col in df.columns\n",
-    "    if col.startswith(\"metformin\") or col in [\"insulin\", \"glipizide\", \"glyburide\"]\n",
+    "    \"metformin\",\n",
+    "    \"repaglinide\",\n",
+    "    \"nateglinide\",\n",
+    "    \"chlorpropamide\",\n",
+    "    \"glimepiride\",\n",
+    "    \"acetohexamide\",\n",
+    "    \"glipizide\",\n",
+    "    \"glyburide\",\n",
+    "    \"tolbutamide\",\n",
+    "    \"pioglitazone\",\n",
+    "    \"rosiglitazone\",\n",
+    "    \"acarbose\",\n",
+    "    \"miglitol\",\n",
+    "    \"troglitazone\",\n",
+    "    \"tolazamide\",\n",
+    "    \"examide\",\n",
+    "    \"citoglipton\",\n",
+    "    \"insulin\",\n",
+    "    \"glyburide-metformin\",\n",
+    "    \"glipizide-metformin\",\n",
+    "    \"glimepiride-pioglitazone\",\n",
+    "    \"metformin-rosiglitazone\",\n",
+    "    \"metformin-pioglitazone\",\n",
     "]\n",
     "df[med_cols].apply(pd.Series.value_counts).transpose()"
    ]
