--- a/notebooks/02_model_selection.ipynb
+++ b/notebooks/02_model_selection.ipynb
@@ -7,28 +7,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "from collections import Counter\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "from sklearn.impute import SimpleImputer\n",
     "\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold, cross_validate\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from xgboost import XGBClassifier\n",
-    "from src.preprocessing import balance_dataset\n",
     "\n",
-    "\n",
-    "from sklearn.model_selection import StratifiedKFold, cross_validate\n",
-    "\n",
-    "\n",
-    "from src.data import clean_data\n",
-    "from src.data import normalize_column_names\n",
-    "from src.features import feature_engineering"
+    "from src.data import clean_data, normalize_column_names\n",
+    "from src.features import feature_engineering\n",
+    "from src.ml.pipelines import build_preprocess_pipeline\n",
+    "from src.preprocessing import balance_dataset"
    ]
   },
   {
@@ -120,7 +114,7 @@
    "id": "da74d93e",
    "metadata": {},
    "source": [
-    "### Under sampling"
+    "### Balance dataset"
    ]
   },
   {
@@ -131,7 +125,7 @@
    "outputs": [],
    "source": [
     "print(f\"Numer of rows before sampling: {X.shape[0]:,}\")\n",
-    "X, y = balance_dataset(X, y)\n",
+    "X, y = balance_dataset(X, y, strategy=\"undersample\")\n",
     "print(f\"Numer of rows after sampling: {X.shape[0]:,}\")"
    ]
   },
@@ -183,56 +177,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "249e2bbd",
-   "metadata": {},
-   "source": [
-    "# 4. Build the pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e76a02b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_pipeline(model, X):\n",
-    "    # Detect columns\n",
-    "    num_cols = X.select_dtypes(\n",
-    "        include=[\"int\", \"float\", \"int64\", \"float64\"]\n",
-    "    ).columns.tolist()\n",
-    "    cat_cols = X.select_dtypes(include=[\"object\", \"category\", \"bool\"]).columns.tolist()\n",
-    "\n",
-    "    # Pipelines by type\n",
-    "    numeric_pipeline = Pipeline(\n",
-    "        [(\"imputer\", SimpleImputer(strategy=\"median\")), (\"scaler\", StandardScaler())]\n",
-    "    )\n",
-    "\n",
-    "    categorical_pipeline = Pipeline(\n",
-    "        [\n",
-    "            (\"imputer\", SimpleImputer(strategy=\"most_frequent\")),\n",
-    "            (\n",
-    "                \"encoder\",\n",
-    "                OneHotEncoder(\n",
-    "                    handle_unknown=\"ignore\", drop=\"first\", sparse_output=False\n",
-    "                ),\n",
-    "            ),\n",
-    "        ]\n",
-    "    )\n",
-    "\n",
-    "    preprocessor = ColumnTransformer(\n",
-    "        [(\"num\", numeric_pipeline, num_cols), (\"cat\", categorical_pipeline, cat_cols)]\n",
-    "    )\n",
-    "\n",
-    "    return Pipeline([(\"preprocessor\", preprocessor), (\"model\", model)])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f4e3d825",
    "metadata": {},
    "source": [
-    "# 5. Cross-validation Setup"
+    "# 4. Cross-validation Setup"
    ]
   },
   {
@@ -257,7 +205,7 @@
    "id": "f2fad540",
    "metadata": {},
    "source": [
-    "# 6. Evaluate Each Model"
+    "# 5. Evaluate Each Model"
    ]
   },
   {
@@ -271,7 +219,9 @@
     "\n",
     "for name, model in models.items():\n",
     "    print(f\"----------\\nTesting model: {name}\")\n",
-    "    pipeline = build_pipeline(model, X_train)\n",
+    "    preprocessor = build_preprocess_pipeline(X_train)\n",
+    "    pipeline = Pipeline([(\"preprocessor\", preprocessor), (\"model\", model)])\n",
+    "\n",
     "    scores = cross_validate(\n",
     "        pipeline, X_train, y_train, cv=cv, scoring=scoring, return_train_score=False\n",
     "    )\n",
@@ -294,7 +244,7 @@
    "id": "821f09c5",
    "metadata": {},
    "source": [
-    "# 7. Visualize Comparison"
+    "# 6. Visualize Comparison"
    ]
   },
   {
